--- a/Ej.Client/Resources/Controllers/HomeController.resx
+++ b/Ej.Client/Resources/Controllers/HomeController.resx
@@ -120,4 +120,70 @@
   <data name="__Hello" xml:space="preserve">
     <value>Hello</value>
   </data>
+  <data name="__View_Index_Content" xml:space="preserve">
+    <value>&lt;p&gt;
+    I'm a resident (he/him) of the beautiful country of Belgium, and this
+    website serves as a minimalistic online presence for me.
+&lt;/p&gt;
+&lt;p&gt;
+    While there
+    isn't much to see here, and this website isn't the most fancy out there 
+    - that's because I like simplicity - 
+    feel free to explore and get a glimpse into my digital corner.
+&lt;/p&gt;
+&lt;p&gt;
+    This site is intentionally kept discreet to maintain privacy, but
+    I appreciate your visit nonetheless. If you have any inquiries or just
+    want to say hello, you can drop me a line &lt;a asp-controller="Contact" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Contact"&gt;here&lt;/a&gt;.
+&lt;/p&gt;
+&lt;p&gt;
+    Thank you for stopping by!
+&lt;/p&gt;</value>
+  </data>
+  <data name="__View_Index_MetaTitle" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="__View_Index_Title" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="__View_Privacy_Content" xml:space="preserve">
+    <value>&lt;p&gt;
+    I, {{Tenant_Name}}, am committed to protecting the privacy of visitors to my website, &lt;a href="/en" title="{{Tenant_Name}}"&gt;{{Tenant_Name}}&lt;/a&gt;. This Privacy Policy outlines the types of information I collect from visitors to my website, how I use that information, and your rights regarding your personal data. This Privacy Policy is in accordance with the EU General Data Protection Regulation (GDPR).
+&lt;/p&gt;
+
+&lt;article&gt;
+    &lt;h3&gt;1. Information I Collect&lt;/h3&gt;
+    &lt;p&gt;
+        When you visit my website, I automatically collect a little bit of information about your device, including information about your web browser, IP address, but, none of the cookies that are installed on your device. Additionally, as you browse the site, I collect information about the individual web pages, you view, what websites or search terms referred you to the site, and information about how you interact with the site.
+    &lt;/p&gt;
+    &lt;h3&gt;2. Use of Cookies&lt;/h3&gt;
+    &lt;p&gt;
+        I use one cookie on my website. A cookie is a small text file that is stored on your computer or mobile device when you visit a website. The only cookie I store is a confirmation of whether you have consented to my GDPR message. I do not use cookies to personalize content and ads, to provide social media features, and to analyze traffic.
+    &lt;/p&gt;
+    &lt;h3&gt;3. Your Consent&lt;/h3&gt;
+    &lt;p&gt;
+        By using my website, you consent to the terms of this Privacy Policy and agree to the collection and use of information as described herein.
+    &lt;/p&gt;
+    &lt;h3&gt;4. Your Rights&lt;/h3&gt;
+    &lt;p&gt;
+        Under the GDPR, you have certain rights regarding your personal data, including the right to access, correct, or delete your personal information. You also have the right to restrict or object to certain types of processing. If you would like to exercise any of these rights, please contact me using the information provided below.
+    &lt;/p&gt;
+    &lt;h3&gt;5. Contact Me&lt;/h3&gt;
+    &lt;p&gt;
+        If you have any questions about this Privacy Policy or would like to exercise your rights regarding your personal data, please contact me using this &lt;a href="/en/contact" title="Contact"&gt;contact page&lt;/a&gt;.
+    &lt;/p&gt;
+    &lt;h3&gt;6. Changes to this Privacy Policy&lt;/h3&gt;
+    &lt;p&gt;
+        I reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the revised Privacy Policy on the website. I encourage you to review this Privacy Policy periodically for any updates or changes.
+    &lt;/p&gt;
+    &lt;p&gt;Thank you visiting my website.&lt;/p&gt;
+    &lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;
+&lt;/article&gt;</value>
+  </data>
+  <data name="__View_Privacy_MetaTitle" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
+  <data name="__View_Privacy_Title" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
 </root>
