--- a/Ej.Client/Resources/SharedResource.resx
+++ b/Ej.Client/Resources/SharedResource.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="__AriaLabel_CloseMenu" xml:space="preserve">
+    <value>Close menu</value>
+  </data>
+  <data name="__AriaLabel_ShowMenu" xml:space="preserve">
+    <value>Show menu</value>
+  </data>
+  <data name="__Gdpr_Button_Accept" xml:space="preserve">
+    <value>Accept</value>
+  </data>
+  <data name="__Gdpr_Button_Reject" xml:space="preserve">
+    <value>Reject</value>
+  </data>
+  <data name="__Gdpr_ConsentMessage" xml:space="preserve">
+    <value>This website uses one cookie. By using this website, you agree to our &lt;a href="/en/privacy-policy" title="Privacy Policy"&gt;Privacy Policy&lt;/a&gt;.</value>
+  </data>
   <data name="__NavItem_Contact" xml:space="preserve">
     <value>Contact</value>
   </data>
