--- a/Ej.Client/Resources/Controllers/HomeController.resx
+++ b/Ej.Client/Resources/Controllers/HomeController.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="__Hello" xml:space="preserve">
-    <value>Hello</value>
-  </data>
   <data name="__View_Index_Content" xml:space="preserve">
     <value>&lt;p&gt;
     I'm a resident (he/him) of the beautiful country of Belgium, and this
@@ -142,6 +139,9 @@
   </data>
   <data name="__View_Index_MetaTitle" xml:space="preserve">
     <value>Home</value>
+  </data>
+  <data name="__View_Index_PageTitle" xml:space="preserve">
+    <value>Hello</value>
   </data>
   <data name="__View_Index_Title" xml:space="preserve">
     <value>Home</value>
