--- a/Ej.Client/Resources/Controllers/ContactController.resx
+++ b/Ej.Client/Resources/Controllers/ContactController.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="__Tag_Index_og:description" xml:space="preserve">
+    <value>Fill out this webform to contact {{Tenant_Name}}.</value>
+  </data>
+  <data name="__Tag_Index_og:title" xml:space="preserve">
+    <value>Get in touch with {{Tenant_Name}}.</value>
+  </data>
   <data name="__View_Error_Content" xml:space="preserve">
     <value>&lt;p&gt;
         My bad! 
