--- a/Ej.Client/Resources/Controllers/HomeController.resx
+++ b/Ej.Client/Resources/Controllers/HomeController.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="__Tag_Index_og:description" xml:space="preserve">
+    <value>-This is the personal website of {{Tenant_Name}} and serves as as his minimalistic online presence.</value>
+  </data>
+  <data name="__Tag_Index_og:title" xml:space="preserve">
+    <value>-{{Tenant_Name}}'s personal website</value>
+  </data>
+  <data name="__Tag_Privacy_og:description" xml:space="preserve">
+    <value>Taking your privacy seriously, please read my Privacy Policy.</value>
+  </data>
+  <data name="__Tag_Privacy_og:title" xml:space="preserve">
+    <value>{{Tenant_Name}}'s privacy policy</value>
+  </data>
   <data name="__View_Index_Content" xml:space="preserve">
     <value>&lt;p&gt;
     I'm a resident (he/him) of the beautiful country of Belgium, and this
