--- a/Ej.Client/Localization/Resources/Controllers/ContactController.nl.resx
+++ b/Ej.Client/Localization/Resources/Controllers/ContactController.nl.resx
@@ -118,50 +118,66 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="__Tag_Index_og:description" xml:space="preserve">
-    <value>Fill out this webform to contact {{Tenant_Name}}.</value>
+    <value>Vul dit formulier in om {{Tenant_Name}} te contacteren.</value>
   </data>
   <data name="__Tag_Index_og:title" xml:space="preserve">
-    <value>Get in touch with {{Tenant_Name}}.</value>
+    <value>Contacteer {{Tenant_Name}}</value>
   </data>
   <data name="__View_Error_Content" xml:space="preserve">
     <value>&lt;p&gt;
-        My bad! 
-        It seems like there has been a major hiccup while handling your request. I might have missed your message 
-        altogether. 
-    &lt;/p&gt;
-    &lt;p&gt;
-        Everything has gone into meltdown mode here, with alarms and sirens blaring, so 
-        don't sweat it though, a solution on it's way!
-    &lt;/p&gt;
-    &lt;p&gt;
-        I'm sorry, but you'll have to try again &lt;a href="/en/contact" title="Contact"&gt;here&lt;/a&gt;.
-    &lt;/p&gt;
-    &lt;p&gt;Ciao,&lt;/p&gt;
-    &lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;</value>
+	Mijn fout! 
+	Het lijkt erop dat er zich een probleem heeft voorgedaan  bij het verwerken van je verzoek. Ik heb je bericht dan ook mogelijk helemaal niet ontvangen.
+&lt;/p&gt;
+&lt;p&gt;
+	Hier is alles in meltdown modus, met alarmen en sirenes die loeien, dus maak je geen zorgen, een oplossing is onderweg!
+&lt;/p&gt;
+&lt;p&gt;
+	Het spijt me, maar je zult het &lt;a href="/nl/contact" title="Contact"&gt;hier&lt;/a&gt; opnieuw moeten proberen.
+&lt;/p&gt;
+&lt;p&gt;Ciao,&lt;/p&gt;
+&lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;</value>
   </data>
   <data name="__View_Error_MetaTitle" xml:space="preserve">
-    <value>An error occured while sending your request.</value>
+    <value>Fout bij het versturen van je bericht.</value>
   </data>
   <data name="__View_Error_PageTitle" xml:space="preserve">
     <value>Hi {{Contact_Name}},</value>
   </data>
   <data name="__View_Error_Title" xml:space="preserve">
-    <value>Contact error</value>
+    <value>Fout bij contactformulier</value>
   </data>
   <data name="__View_Index_Content" xml:space="preserve">
-    <value>&lt;p&gt;Need some help or have a question? Don't hesitate to shoot me a message. I'm here to lend a hand and answer any queries you might have. Just give me a shout, and I'll be happy to assist you!&lt;/p&gt;</value>
+    <value>&lt;p&gt;Heb je hulp nodig of heb je een vraag? Aarzel niet om me een bericht te sturen. Geef me gewoon een seintje en ik help je graag verder!&lt;/p&gt;</value>
   </data>
   <data name="__View_Index_Form_Email" xml:space="preserve">
-    <value>And of course, what is your email?</value>
+    <value>Wat is je email adres?</value>
+  </data>
+  <data name="__View_Index_Form_Email_Invalid" xml:space="preserve">
+    <value>Dit email adres is ongeldig.</value>
+  </data>
+  <data name="__View_Index_Form_Email_Required" xml:space="preserve">
+    <value>Het email adres is een verplicht veld.</value>
   </data>
   <data name="__View_Index_Form_Message" xml:space="preserve">
-    <value>Tell me what's up:</value>
+    <value>En wat is je bericht:</value>
+  </data>
+  <data name="__View_Index_Form_Message_InvalidLength" xml:space="preserve">
+    <value>Je bericht moet tussen 2 en 2000 karakters lang zijn.</value>
+  </data>
+  <data name="__View_Index_Form_Message_Required" xml:space="preserve">
+    <value>Bericht is een verplicht veld.</value>
   </data>
   <data name="__View_Index_Form_Name" xml:space="preserve">
-    <value>What is your name?</value>
+    <value>Wat is je naam?</value>
+  </data>
+  <data name="__View_Index_Form_Name_InvalidLength" xml:space="preserve">
+    <value>Je naam moet tussen 2 en 100 karakters lang zijn.</value>
+  </data>
+  <data name="__View_Index_Form_Name_Required" xml:space="preserve">
+    <value>Je naam is een verplicht veld.</value>
   </data>
   <data name="__View_Index_Form_Submit" xml:space="preserve">
-    <value>Get in touch</value>
+    <value>Verzenden</value>
   </data>
   <data name="__View_Index_MetaTitle" xml:space="preserve">
     <value>Contact</value>
@@ -170,17 +186,17 @@
     <value>Contact</value>
   </data>
   <data name="__View_Success_Content" xml:space="preserve">
-    <value>&lt;p&gt;Thank you for reaching out to me.  I'll get back to you from the moment I read your message.&lt;/p&gt;
+    <value>&lt;p&gt;Bedankt voor je bericht. Ik beantwoord je bericht van zodra ik het lees.&lt;/p&gt;
 &lt;p&gt;Ciao,&lt;/p&gt;
 &lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;</value>
   </data>
   <data name="__View_Success_MetaTitle" xml:space="preserve">
-    <value>Your reques has been sent successfully.</value>
+    <value>Je bericht werd verzonden.</value>
   </data>
   <data name="__View_Success_PageTitle" xml:space="preserve">
-    <value>Hi {{Contact_Name}},</value>
+    <value>Hallo {{Contact_Name}},</value>
   </data>
   <data name="__View_Success_Title" xml:space="preserve">
-    <value>Contact success</value>
+    <value>*** s ***</value>
   </data>
 </root>
