--- a/Ej.Client/Localization/Resources/Controllers/ErrorController.nl.resx
+++ b/Ej.Client/Localization/Resources/Controllers/ErrorController.nl.resx
@@ -119,43 +119,42 @@
   </resheader>
   <data name="__View_404_Content" xml:space="preserve">
     <value>&lt;p&gt;
-    Oops, I couldn't find the page you requested. Most likely, this is
-    caused by a page that has been removed or a typo that slipped into the code.
+    Oeps, ik kon de pagina die u zocht niet vinden. Hoogstwaarschijnlijk is dit
+ veroorzaakt door een pagina die is verwijderd of een typefout die in de code is geslopen.
+&lt;/p&gt;
+&lt;p&gt;Dit zou natuurlijk niet mogen gebeuren. Mijn excuses.
 &lt;/p&gt;
 &lt;p&gt;
-    This should not be happening of course. I apologize.
-&lt;/p&gt;
-&lt;p&gt;
-    Please return to the &lt;a href="/en" title="Home"&gt;home&lt;/a&gt; page and try again.
+    Ga a.u.b. terug naar de &lt;a href="/nl" title="Home"&gt;home&lt;/a&gt; pagina en probeer opnieuw.
 &lt;/p&gt;
 &lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;</value>
   </data>
   <data name="__View_404_MetaTitle" xml:space="preserve">
-    <value>Page not found</value>
+    <value>Pagina niet gevonden</value>
   </data>
   <data name="__View_404_Title" xml:space="preserve">
-    <value>Page not found (404)</value>
+    <value>Pagina niet gevonden (404)</value>
   </data>
   <data name="__View_500_Content" xml:space="preserve">
     <value>&lt;p&gt;
-    Oops, something serious went wrong behind the scenes.
+    Oeps, er is iets ernstigs misgegaan achter de schermen.
 &lt;/p&gt;
 &lt;p&gt;
-    Everything has gone into meltdown mode here, with alarms and sirens blaring, so
-    don't sweat it though, a solution is on it's way!
+    Alles is hier in meltdown modus gegaan, met alarmen en sirenes die loeien, dus
+    maak je geen zorgen, er komt een oplossing aan!
 &lt;/p&gt;
 &lt;p&gt;
-    Of course, this should not be happening and I apologize for the inconvenience.
+    Dit zou natuurlijk niet mogen gebeuren en ik bied mijn excuses aan voor het ongemak.
 &lt;/p&gt;
 &lt;p&gt;
-    Please return to the &lt;a asp-controller="Home" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Home"&gt;home page&lt;/a&gt; and try again.
+    Ga a.u.b. terug naar de &lt;a href="/nl" title="Home"&gt;home&lt;/a&gt; pagina en probeer opnieuw.
 &lt;/p&gt;
 &lt;p&gt;{{Tenant_ShortName}}&lt;/p&gt;</value>
   </data>
   <data name="__View_500_MetaTitle" xml:space="preserve">
-    <value>Serious Problem</value>
+    <value>Interne fout</value>
   </data>
   <data name="__View_500_Title" xml:space="preserve">
-    <value>Serious Problem (500)</value>
+    <value>Interne fout (500)</value>
   </data>
 </root>
