Fixed some content text.

--- a/Ej.Client/Localization/Resources/Controllers/HomeController.nl.resx
+++ b/Ej.Client/Localization/Resources/Controllers/HomeController.nl.resx
@@ -131,7 +131,7 @@
   </data>
   <data name="__View_Index_Content" xml:space="preserve">
     <value>&lt;p&gt;
-    Ik ben een inwoner (hij/hem) van België en deze website is mijn minimalistische online aanwezigheid.
+    Ik (hij/hem) ben een inwoner van België en deze website is mijn minimalistische online aanwezigheid.
 &lt;/p&gt;
 &lt;p&gt;
 	Deze website site is bewust bescheiden gehouden om mijn privacy te beschermen, maar ik waardeer je bezoek. Als je vragen hebt of gewoon hallo wilt zeggen, kun je me &lt;a href="/nl/contact" title="Contact"&gt;hier&lt;/a&gt; een bericht sturen.
