--- a/Ej.Client/Localization/Resources/Controllers/HomeController.resx
+++ b/Ej.Client/Localization/Resources/Controllers/HomeController.resx
@@ -131,7 +131,7 @@
   </data>
   <data name="__View_Index_Content" xml:space="preserve">
     <value>&lt;p&gt;
-    I'm a resident (he/him) of the beautiful country of Belgium, and this
+    I (he/him) am a resident of the beautiful country of Belgium, and this
     website serves as a minimalistic online presence for me.
 &lt;/p&gt;
 &lt;p&gt;
