--- a/Ej.Client/Localization/Resources/Controllers/HomeController.resx
+++ b/Ej.Client/Localization/Resources/Controllers/HomeController.resx
@@ -158,6 +158,12 @@
   <data name="__View_Index_Title" xml:space="preserve">
     <value>Home</value>
   </data>
+  <data name="__View_Ip_Content" xml:space="preserve">
+    <value>Your current IP address is:</value>
+  </data>
+  <data name="__View_Ip_Title" xml:space="preserve">
+    <value>IP Address</value>
+  </data>
   <data name="__View_Privacy_Content" xml:space="preserve">
     <value>&lt;p&gt;
     I, {{Tenant_Name}}, am committed to protecting the privacy of visitors to my website, &lt;a href="/en" title="{{Tenant_HostName}}"&gt;{{Tenant_HostName}}&lt;/a&gt;. This Privacy Policy outlines the types of information I collect from visitors to my website, how I use that information, and your rights regarding your personal data. This Privacy Policy is in accordance with the EU General Data Protection Regulation (GDPR).
